# voice2json

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG  Dockerfile  Dockerfile.debian  Dockerfile.mqtt  Dockerfile.pocketsphinx  Dockerfile.test.debian  LICENSE  Makefile  Makefile.in  PKG-INFO  README.md  TODO.md  __main__.py  aclocal.m4  build.sh  configure  configure.ac  debianize.sh  install.sh  kaldi_setup.py  mkdocs.yml  mypy.ini  pylintrc  requirements.txt  requirements_dev.txt  setup.cfg  setup.py.in  test.sh  voice2json.sh  voice2json.sh.in  voice2json.spec  voice2json.spec.in
debian/: control.in  kaldi_include.txt  voice2json
debian/voice2json_1.0_aarch64/DEBIAN/: control
debian/voice2json_1.0_amd64/DEBIAN/: control
debian/voice2json_1.0_amd64/usr/lib/voice2json/etc/: profile.defaults.yml
debian/voice2json_1.0_armhf/DEBIAN/: control
debian/voice2json_1.0_armhf/usr/lib/voice2json/etc/: config.guess
docker/: Dockerfile.pyinstaller  voice2json
docker/multiarch_build/: Dockerfile  Dockerfile.build  Dockerfile.build.amd64  Dockerfile.build.arm64  Dockerfile.build.armv6  Dockerfile.build.armv7  Dockerfile.debian  Dockerfile.debian.amd64  Dockerfile.debian.arm64  Dockerfile.debian.armv6  Dockerfile.debian.armv7  Dockerfile.pyinstaller  Dockerfile.run  Dockerfile.run.amd64  Dockerfile.run.arm64  Dockerfile.run.armv6  Dockerfile.run.armv7  Makefile
docs/: CNAME  Whitepaper.ipynb  about.md  commands.md  formats.md  index.md  install.md  profiles.md  recipes.md  requirements.txt  sentences.md  whitepaper.md
docs/data/: LightState.fst  LightState.gram  intent.fst
etc/: config.sub  kaldi-src-configure.patch  linux_atlas_aarch64.mk  profile.defaults.yml
etc/precise/: athena.pb  athena.pb.params  athena.pbtxt  christopher-precise.pb  christopher-precise.pb.params  computer-en.pb  hey-mycroft-2.pb  hey-mycroft-2.pb.params  marvin.pb  marvin.pb.params  sheila-en.pb
etc/profiles/: ca-es_pocketsphinx-cmu.yml  cs-cz_kaldi-rhasspy.yml  de_deepspeech-aashishag.yml  de_deepspeech-jaco.yml  de_kaldi-zamia.yml  de_pocketsphinx-cmu.yml  el-gr_pocketsphinx-cmu.yml  en-in_pocketsphinx-cmu.yml  en-us_deepspeech-mozilla.yml  en-us_julius-github.yml  en-us_kaldi-rhasspy.yml  en-us_kaldi-zamia.yml  en-us_pocketsphinx-cmu.yml  es-mexican_pocketsphinx-cmu.yml  es_deepspeech-jaco.yml  es_kaldi-rhasspy.yml  es_pocketsphinx-cmu.yml  fr_deepspeech-jaco.yml  fr_kaldi-guyot.yml  fr_kaldi-rhasspy.yml  fr_pocketsphinx-cmu.yml  hi_pocketsphinx-cmu.yml  it_deepspeech-jaco.yml  it_deepspeech-mozillaitalia.yml  it_kaldi-rhasspy.yml  it_pocketsphinx-cmu.yml  ko-kr_kaldi-montreal.yml  kz_pocketsphinx-cmu.yml  nl_kaldi-cgn.yml  nl_kaldi-rhasspy.yml  nl_pocketsphinx-cmu.yml  pl_deepspeech-jaco.yml  pl_julius-github.yml  pt-br_pocketsphinx-cmu.yml  ru_kaldi-rhasspy.yml  ru_pocketsphinx-cmu.yml  sv_kaldi-montreal.yml  sv_kaldi-rhasspy.yml  vi_kaldi-montreal.yml  zh-cn_pocketsphinx-cmu.yml
kaldi_speech/: nnet3.cpp  nnet3.pyx  nnet3_wrappers.cpp  nnet3_wrappers.h
mqtt/: .gitignore  app.py  app_noprofile.py  install.sh  mic_stream.py  pronounce_word.py  recognize_intent.py  record_command.py  requirements.txt  run_server.sh  supervisord.conf  train_profile.py  transcribe_wav.py  utils.py  wait_wake.py  wav_stream.py
mqtt/css/: main.css
mqtt/templates/: download_noprofile.html  index.html  index_noprofile.html  layout.html  layout_noprofile.html  phonemes.html  sentences.html  slots.html  words.html
recipes/deepspeech/: Makefile  README.md  deep_transcribe.py  requirements.txt
recipes/fluent_dataset/: Makefile  README.md  sentences.ini  test_files.txt
recipes/fluent_dataset/results/: test_truth.jsonl  test_truth.txt
recipes/launch_program/: README.md  custom_words.kaldi.txt  custom_words.txt  listen_and_launch.sh  sentences.ini
recipes/launch_program/slots/: program
recipes/parallel_recognition/: recognize_parallel.sh  wav-file-names.txt
recipes/timers/: README.md  do_timer.py  listen_timer.sh  sentences.ini
recipes/train_rasa/: README.md  examples_to_rasa.py  rasa  recognize.sh  sentences.ini  train.sh
scripts/: build-debian.sh  build-docker.sh  build-docs.sh  check-code.sh  create-venv.sh  download-deps.sh  format-code.sh  install-julius.sh  test.sh
scripts/install/: install-deepspeech.sh  install-julius.sh  install-kaldi.sh  install-kenlm.sh  install-opengrm.sh  install-phonetisaurus.sh  install-precise.sh
scripts/test/: test-all.sh  test-debian.sh  test-docker.sh  test-open-transcription.sh  test-print-profile.sh  test-print-version.sh  test-pronounce-word.sh  test-recognize-intent.sh  test-transcribe-wav.sh  test-wait-wake.sh
tests/: test.py
voice2json/: __init__.py  __main__.py  core.py  generate.py  julius.py  pronounce.py  recognize.py  record.py  sounds_like.py  speak.py  test.py  train.py  transcribe.py  tts.py  utils.py  wake.py
voice2json/command/: __init__.py  const.py  webrtcvad.py
voice2json/intent/: __init__.py  const.py  fsticuffs.py  utils.py
voice2json/speech/: __init__.py  const.py  pocketsphinx.py
voice2json/train/: JsgfLexer.g4  JsgfParser.g4  Makefile  __init__.py  ini_jsgf.py  test.py  vocab_dict.py
voice2json/train/fstutils/: .gitignore  Makefile  fstcount-all  fstcount-all.cc  fstprint-all.cc
voice2json/train/jsgf2fst/: DependencyListener.py  FSTListener.py  JsgfLexer.interp  JsgfLexer.py  JsgfListener.py  JsgfParser.interp  JsgfParser.py  JsgfParser.tokens  JsgfParserListener.py  __init__.py  fstaccept.py
voice2json/wake/: __init__.py  const.py  porcupine.py
web/: README.md  app.py  index.html  requirements.txt  whitepaper.html
web/css/: fonts.css  main.css
web/js/: main.js
web/templates/: index.html  layout.html  phonemes.html  words.html
